--- a/README
+++ b/README
@@ -2,4 +2,4 @@
 
 Nicholas Maltbie's homework 1 for cloud computing.
 
-viewable at [http://ec2-13-59-116-138.us-east-2.compute.amazonaws.com/](http://ec2-13-59-116-138.us-east-2.compute.amazonaws.com/)
+viewable at [live website](http://ec2-13-59-116-138.us-east-2.compute.amazonaws.com/)
